@@ -8,6 +8,7 @@
   - JSON may be used as a flatfile type, see Persistence docs
   - Some methods are going away. These will warn for now:
     - $class->__useYaml depracated. Use $class->__useFlatfile instead.
+    - $class->__dbiType depracated. Use $class->__useDbi instead.
     - $array->collect depracated. Use $array->each instead.
     - $array->collectWithIndex depracated. Use $array->each instead.
     - $array->eachWithIndex depracated. Use $array->each instead.
